add dashboard view
