# redirect-service/docs/swagger.yaml
@@ -1,15 +1,41 @@
 basePath: /
 definitions:
+  domain.StatLink:
+    properties:
+      clicks:
+        type: integer
+      date:
+        type: string
+    type: object
+  domain.TopLink:
+    properties:
+      clicks:
+        type: integer
+      original_url:
+        type: string
+      short_url:
+        type: string
+      status:
+        type: boolean
+    type: object
   dto.DashboardResponse:
     properties:
+      stat_links:
+        items:
+          $ref: '#/definitions/domain.StatLink'
+        type: array
+      top_links:
+        items:
+          $ref: '#/definitions/domain.TopLink'
+        type: array
       total_click:
         example: 333
         type: integer
       total_link:
         example: 666
         type: integer
-      unique_visitors:
-        example: 123
+      uniq_visitors:
+        example: 2
         type: integer
     type: object
   dto.HealthResponse:
@@ -88,7 +114,7 @@ paths:
   /api/info/{shortUrl}:
     get:
       parameters:
-      - description: Short Code
+      - description: Short Url
         in: path
         name: shortCode
         required: true
